--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,33 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Matthew Ho</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+   
+   	<center>
+   		<font face = "Arial Black">
+   		<font size = 48>
+   		<font color ='007f82'
+   		<h1>Matthew Ho</h1>
+    	</font color>
+   		</font face>
+   		</font size> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	</center>
+	<font size=32>
+	<font color="#FF0000">
 	<h4>Project Portfolio</h4>
-
+	</font color>
+	</font size>
 	<!-- p means paragraph -->
+</font>
+<font size=20>
 	<p>Matthew is currently waitlisted in COGS 120 at the waitlist position number 5. He is wondering if he will be added to the class by the end of Week 2.</p>
 
-	<h4>Projects</h4>
+	<h4>Things Matthew is doing to get into this class</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>Praying to God that 5 people drop out of this class</li>
+		<li>Hoping for a miracle</li>
+		<li>Crying in bed</li>
+		
 	</ol>
+</font>
 </body>
 </html>
