--- a/static/index.html
+++ b/static/index.html
@@ -3,38 +3,41 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HCI Project Portfolio</title>
+	<title>Matthew's HCI Page</title>
 </head>
-
 <body>
 	<!-- this is a comment in HTML -->
-   
+   	<font color="#007f82">
    	<center>
    		<font face = "Arial Black">
-   		<font size = 48>
-   		<font color ='007f82'
+   		<font size = 48>	
    		<h1>Matthew Ho</h1>
-    	</font color>
+    	
    		</font face>
    		</font size> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	</center>
+	
 	<font size=32>
-	<font color="#FF0000">
-	<h4>Project Portfolio</h4>
-	</font color>
-	</font size>
+    <h4>Student's Description</h4> 
+		</font color>
+		</font size>
 	<!-- p means paragraph -->
-</font>
-<font size=20>
-	<p>Matthew is currently waitlisted in COGS 120 at the waitlist position number 5. He is wondering if he will be added to the class by the end of Week 2.</p>
-
-	<h4>Things Matthew is doing to get into this class</h4>
-	<ol>
-		<li>Praying to God that 5 people drop out of this class</li>
-		<li>Hoping for a miracle</li>
-		<li>Crying in bed</li>
+	</font>
+	<font size=20>
+		<p>Matthew is currently waitlisted in COGS 120 at the waitlist position number 5. He is wondering if he will be added to the class by the end of Week 2.</p>
+		<font color="#007f82">
+		<h4>Things Matthew is doing to get into this class</h4>
+		</font>
+		<ol>
+			<li>Praying to God that 5 people drop out of this class</li>
+			<li>Hoping for a miracle</li>
+			<li>Crying in bed</li>
 		
-	</ol>
+		</ol>
+<img src ="http://66.media.tumblr.com/c024bccec5d53557e12662682f3d4541/tumblr_inline_nt0vwfxruj1spsojg_1280.jpg">
+
+
+</section>
 </font>
 </body>
 </html>
